# SectorBootstrap

./: .gitignore  01_prepare_aln.py  02_compute_weights.py  03_create_subalns.py  03_train_sbm.py  04_train_sbm.py  04_train_subaln_sbm.sh  05_claude_propose_mutations.py  05_combine_mutations.py  05_propose_mutations.py  06_grid_evaluation.py  README  SBM-CM-family.py  compute_weights_cpu.py  config.py  main.py  pyproject.toml  redsector_config3.txt  redsector_mardef_mut.txt  redsector_shodef_mut.txt  utils.py  utils_COMBINE.py
data/: first_5000_weights.npy  full_weights.npy
data/RedSecMar/: subaln_desc_0.npy  subaln_desc_2.npy  subaln_desc_3.npy  subaln_desc_4.npy  subaln_desc_7.npy  subaln_seq_0.npy  subaln_seq_1.npy  subaln_seq_2.npy  subaln_seq_3.npy  subaln_seq_4.npy  subaln_seq_5.npy  subaln_seq_6.npy  subaln_seq_7.npy  subaln_seq_8.npy  subaln_seq_9.npy
data/iter_aln/: subaln_desc_1.npy  subaln_desc_5.npy  subaln_desc_6.npy  subaln_desc_8.npy  subaln_desc_9.npy  subaln_seq_0.npy  subaln_seq_1.npy  subaln_seq_2.npy  subaln_seq_3.npy  subaln_seq_4.npy  subaln_seq_5.npy  subaln_seq_6.npy  subaln_seq_7.npy  subaln_seq_8.npy  subaln_seq_9.npy
grid_evaluation/: grid_evaluation_results.npy  grid_evaluation_summary.csv
